[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[project]
name = "aibox"
version = "1.0.0"
description = "aibox - AI related tools"
authors = [
    { name = "Quantum Snowball", email = "quantum.snowball@gmail.com" }
]
dependencies = [
    "click",
    "colorama",
    "torchinfo",
]

[project.urls]
Homepage = "https://github.com/quantumsnowball/aibox"

